@@ -4,6 +4,7 @@
 		- help function still shows the old options in the header line
 		- when using exclude, already added exclude patterns will get added again
 		- output of rsync and git is more quite
+		- when the user entered an unknown command the help function gets not called
 
 === 0.2.1 - 06.02.2012 ===
 * etckeeper is split up in modules for better development
